force-app/main/default/objects/Notification__c.object
<CustomObject>
    <fields>
        <fullName>AssignedToText__c</fullName>
        <formula>AssignedTo__r.FirstName + &apos; &apos; +  AssignedTo__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned To</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssignedTo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Notifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Break_Down__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Breakdown (Not Use)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Breakdown__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Breakdown</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Code_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Code Group</label>
        <referenceTo>Master_Map__c</referenceTo>
        <relationshipLabel>Notifications (Code Group)</relationshipLabel>
        <relationshipName>Notifications2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Department_Resp__c</fullName>
        <label>Department Resp (ORG ID)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>E_MOC_Application_No__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>E-MOC Application No.</label>
        <referenceTo>E_MOC_Application__c</referenceTo>
        <relationshipLabel>Notification</relationshipLabel>
        <relationshipName>Notification</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Equipment_Text__c</fullName>
        <formula>Equipment__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Equipment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equipment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Equipment</label>
        <referenceTo>Equipment__c</referenceTo>
        <relationshipLabel>Notifications</relationshipLabel>
        <relationshipName>Notifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FaultCodeText__c</fullName>
        <formula>Fault_Code__r.Name + &quot; &quot; + if(NOT( ISBLANK(Fault_Code_Description__c)),Fault_Code_Description__c,Fault_Code__r.Description__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fault Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fault_Code_Description__c</fullName>
        <label>Fault Code Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fault_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fault Code</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>Value does not match Fault Code type.</errorMessage>
            <filterItems>
                <field>Master_Map__c.Type__c</field>
                <operation>equals</operation>
                <value>FaultCode</value>
            </filterItems>
            <filterItems>
                <field>Master_Map__c.Type__c</field>
                <operation>equals</operation>
                <value>Faultcode</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Master_Map__c</referenceTo>
        <relationshipLabel>Notifications (Fault Code)</relationshipLabel>
        <relationshipName>Notifications1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Functional_Location_Text__c</fullName>
        <label>Functional Location</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Functional_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Functional Location</label>
        <referenceTo>Functional_Location__c</referenceTo>
        <relationshipLabel>Notifications</relationshipLabel>
        <relationshipName>Notifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>History_Detail__c</fullName>
        <label>History Detail</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Integration_Message__c</fullName>
        <label>Integration Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Integration_Status__c</fullName>
        <label>Integration Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LINK__c</fullName>
        <formula>HYPERLINK(&quot;/lightning/cmp/c__THOR_NotificationRecordDisplay?c__recordId=&quot;+ Id
										&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,(
														IF(FIND(MID(Id,1,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0)
														+IF(FIND(MID(Id,2,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0)
														+IF(FIND(MID(Id,3,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0)
														+IF(FIND(MID(Id,4,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0)
														+IF(FIND(MID(Id,5,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0)
										)+1,1)
										&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,(
														IF(FIND(MID(Id,6,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0)
														+IF(FIND(MID(Id,7,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0)
														+IF(FIND(MID(Id,8,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0)
														+IF(FIND(MID(Id,9,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0)
														+IF(FIND(MID(Id,10,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0)
										)+1,1)
										&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,(
														IF(FIND(MID(Id,11,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0)
														+IF(FIND(MID(Id,12,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0)
														+IF(FIND(MID(Id,13,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0)
														+IF(FIND(MID(Id,14,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0)
														+IF(FIND(MID(Id,15,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0)
										)+1,1) ,&quot;LINK TO RECORD&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LINK</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Activity__c</fullName>
        <label>Last Activity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Item__c</fullName>
        <defaultValue>&apos;0&apos;</defaultValue>
        <description>Handles Last Item for the Notification</description>
        <label>Last Item</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <formula>IF(ISBLANK(Equipment__c), Functional_Location__r.Location__c, Equipment__r.location__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MainWorkCenterText__c</fullName>
        <formula>Main_Work_Center__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Main Work Center</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Work_Center_Text__c</fullName>
        <label>Main Work Center Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Work_Center__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Main Work Center</label>
        <referenceTo>Master_Map__c</referenceTo>
        <relationshipLabel>Notifications</relationshipLabel>
        <relationshipName>Notifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Main_Work_Center_and_Plant_Section__c</fullName>
        <formula>IF( AND(  LEFT(Main_Work_Center_Text__c, 4)  = &apos;ENMA&apos;, Plant_Section__c = &apos;T1&apos;) , &apos;TOC1&apos; , 
IF( AND(  LEFT(Main_Work_Center_Text__c, 4)  = &apos;ENMA&apos;, Plant_Section__c = &apos;T2&apos;) , &apos;TOC2&apos; , 
IF( AND(  RIGHT(Main_Work_Center_Text__c, 3)  = &apos;SPP&apos;, Plant_Section__c = &apos;UT&apos;) , &apos;SPP&apos; ,
IF( AND(  LEFT(Main_Work_Center_Text__c, 4)  = &apos;ENMB&apos;, Plant_Section__c = &apos;T4&apos;) , &apos;TOC4&apos; ,
IF( AND(  LEFT(Main_Work_Center_Text__c, 4)  = &apos;ENMB&apos;, Plant_Section__c = &apos;UT&apos;) , &apos;UTIL&apos; ,
IF( AND(  LEFT(Main_Work_Center_Text__c, 4)  = &apos;ENMC&apos;, Plant_Section__c = &apos;T3&apos;) , &apos;TOC3&apos; ,
IF( AND(  LEFT(Main_Work_Center_Text__c, 4)  = &apos;ENMC&apos;, Plant_Section__c = &apos;T5&apos;) , &apos;TOC5&apos; ,
IF( AND(  LEFT(Main_Work_Center_Text__c, 4)  = &apos;ENMD&apos;, Plant_Section__c = &apos;MO&apos;) , &apos;MOV&apos; ,
IF( AND(  LEFT(Main_Work_Center_Text__c, 4)  = &apos;ENMD&apos;, Plant_Section__c = &apos;OF&apos;) , &apos;OFFS&apos; ,
IF( AND(  LEFT(Main_Work_Center_Text__c, 4)  = &apos;ENME&apos;, Plant_Section__c = &apos;L1&apos;) , &apos;TLB&apos; ,
IF( AND(  LEFT(Main_Work_Center_Text__c, 4)  = &apos;ENMF&apos;, Plant_Section__c = &apos;B1&apos;) , &apos;LABIX&apos; ,
IF( AND(  LEFT(Main_Work_Center_Text__c, 4)  = &apos;ENMF&apos;, Plant_Section__c = &apos;P1&apos;) , &apos;TPX&apos; ,




Main_Work_Center_Text__c ))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Main Work Center</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaintenancePlantText__c</fullName>
        <label>Maintenance Plant Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maintenance_Plant__c</fullName>
        <formula>IF(ISBLANK(Equipment__c), Functional_Location__r.Maintenance_Plant__r.Code__c, Equipment__r.maintenancePlant__r.Code__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Maintenance Plant</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notification_Number__c</fullName>
        <externalId>true</externalId>
        <label>Notification Number</label>
        <length>16</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Notification_Status_Set__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Notification Status Set</label>
        <referenceTo>Master_Map_Set__c</referenceTo>
        <relationshipLabel>Notifications</relationshipLabel>
        <relationshipName>Notifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notification_Status__c</fullName>
        <label>Notification Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                    <label>In Process</label>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>In Execution</fullName>
                    <isActive>false</isActive>
                    <label>In Execution</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OPSMainWorkCenter__c</fullName>
        <formula>IF(MaintenancePlantText__c == &apos;4200&apos;, &apos;OPS-TLB&apos;,
 IF(MaintenancePlantText__c == &apos;3200&apos;, &apos;OPS-TPX&apos;,
  IF(MaintenancePlantText__c == &apos;7200&apos;, &apos;OPS-LABI&apos;,
   IF(MaintenancePlantText__c == &apos;8200&apos;, IF(PlantSectionText__c != &apos;UT&apos;, &apos;OPS-SPP&apos;, &apos;OPS-UTIL&apos;),
    IF(AND(OR(ISBLANK(MaintenancePlantText__c), MaintenancePlantText__c == &apos;1200&apos;), PlantSectionText__c == &apos;T1&apos;), &apos;OPS-TOC1&apos;,
     IF(AND(OR(ISBLANK(MaintenancePlantText__c), MaintenancePlantText__c == &apos;1200&apos;), PlantSectionText__c == &apos;T2&apos;), &apos;OPS-TOC2&apos;,
      IF(AND(OR(ISBLANK(MaintenancePlantText__c), MaintenancePlantText__c == &apos;1200&apos;), PlantSectionText__c == &apos;T3&apos;), &apos;OPS-TOC3&apos;, 
       IF(AND(OR(ISBLANK(MaintenancePlantText__c), MaintenancePlantText__c == &apos;1200&apos;), PlantSectionText__c == &apos;T4&apos;), &apos;OPS-TOC4&apos;, 
        IF(AND(OR(ISBLANK(MaintenancePlantText__c), MaintenancePlantText__c == &apos;1200&apos;), PlantSectionText__c == &apos;T5&apos;), &apos;OPS-TOC5&apos;, 
         IF(AND(OR(ISBLANK(MaintenancePlantText__c), MaintenancePlantText__c == &apos;1200&apos;), OR(PlantSectionText__c == &apos;UT&apos;, PlantSectionText__c == &apos;UT2&apos;)), &apos;OPS-UTIL&apos;, 
          IF(AND(OR(ISBLANK(MaintenancePlantText__c), MaintenancePlantText__c == &apos;1200&apos;), PlantSectionText__c == &apos;MO&apos;), &apos;OPS-MOVE&apos;, 
           IF(AND(OR(ISBLANK(MaintenancePlantText__c), MaintenancePlantText__c == &apos;1200&apos;), PlantSectionText__c == &apos;OF&apos;), &apos;OPS-OFFS&apos;,
            IF(AND(OR(ISBLANK(MaintenancePlantText__c), MaintenancePlantText__c == &apos;1200&apos;), OR(PlantSectionText__c == &apos;ID1&apos;, PlantSectionText__c == &apos;OC&apos;)), &apos;OPS-TOC1 OPS-TOC2 OPS-TOC3 OPS-TOC4 OPS-TOC5 OPS-UTIL OPS-MOV OPS-OFFS&apos;, &apos;&apos;)))))))))))))</formula>
        <label>OPS Main Work Center</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Name_Text__c</fullName>
        <label>Order Name Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Text__c</fullName>
        <formula>Order__r.Order_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Order does not integration with SAP System</errorMessage>
            <filterItems>
                <field>Order__c.Order_Number__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Order__c</referenceTo>
        <relationshipLabel>Notifications</relationshipLabel>
        <relationshipName>Notifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Planner_Group_Text__c</fullName>
        <formula>Planner_Group__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Planner Group Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Planner_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Planner Group</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Master_Map__c.Type__c</field>
                <operation>equals</operation>
                <value>PlannerGroup</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Master_Map__c</referenceTo>
        <relationshipLabel>Notifications (Planner Group)</relationshipLabel>
        <relationshipName>Notification1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Planning_Plant_Text__c</fullName>
        <formula>Planning_Plant__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Planning Plant Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Planning_Plant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Planning Plant</label>
        <referenceTo>Master_Map__c</referenceTo>
        <relationshipLabel>Notifications (Planning Plant)</relationshipLabel>
        <relationshipName>Notifications3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PlantSectionText__c</fullName>
        <label>Plant Section Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plant_Section__c</fullName>
        <formula>IF(NOT(ISBLANK(Equipment__c)), Equipment__r.plantSection__c, Functional_Location__r.PlantSection__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plant Section</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Normal</fullName>
                    <default>true</default>
                    <label>Normal</label>
                </value>
                <value>
                    <fullName>Urgent</fullName>
                </value>
                <value>
                    <fullName>Immediately</fullName>
                </value>
                <value>
                    <fullName>Float Time - 1M</fullName>
                </value>
                <value>
                    <fullName>Float Time - 3M</fullName>
                </value>
                <value>
                    <fullName>Float Time - 6M</fullName>
                </value>
                <value>
                    <fullName>Float Time - 9M</fullName>
                </value>
                <value>
                    <fullName>Float Time - 12M</fullName>
                </value>
                <value>
                    <fullName>Float Time - 15M</fullName>
                </value>
                <value>
                    <fullName>Float Time - 18M</fullName>
                </value>
                <value>
                    <fullName>HIGH</fullName>
                    <isActive>false</isActive>
                    <label>HIGH</label>
                </value>
                <value>
                    <fullName>LOW</fullName>
                    <isActive>false</isActive>
                    <label>LOW</label>
                </value>
                <value>
                    <fullName>MEDIUM</fullName>
                    <isActive>false</isActive>
                    <label>MEDIUM</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Report_By__c</fullName>
        <label>Report By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_Date__c</fullName>
        <label>Requested Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Requester_PISUser_Text__c</fullName>
        <description>Host Id or Home Id for sync data to SAP Integration</description>
        <label>Requester Text</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requester_PISUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requester</label>
        <referenceTo>PISUsers__c</referenceTo>
        <relationshipLabel>Notification</relationshipLabel>
        <relationshipName>Notification</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requester__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requester</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Notification</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Required_End__c</fullName>
        <label>Required End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Required_Start__c</fullName>
        <label>Required Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>System_Status_Text__c</fullName>
        <defaultValue>&quot;OSNO&quot;</defaultValue>
        <label>System Status Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CM</fullName>
                    <default>true</default>
                    <label>CM</label>
                </value>
                <value>
                    <fullName>PM</fullName>
                </value>
                <value>
                    <fullName>SH</fullName>
                </value>
                <value>
                    <fullName>OP</fullName>
                </value>
                <value>
                    <fullName>CR</fullName>
                </value>
                <value>
                    <fullName>FN</fullName>
                </value>
                <value>
                    <fullName>PJ</fullName>
                    <isActive>false</isActive>
                    <label>PJ</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Status_Text__c</fullName>
        <label>User Status Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Status__c</fullName>
        <label>User Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Clearance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Clearance</label>
        <referenceTo>Work_Clearance__c</referenceTo>
        <relationshipLabel>Notifications</relationshipLabel>
        <relationshipName>Notifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>isIRPA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isIRPA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isSOAP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isSOAP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mainWorkCenterPlantText__c</fullName>
        <formula>mainWorkCenterPlant__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>mainWorkCenterPlantText</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mainWorkCenterPlant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>mainWorkCenterPlant</label>
        <referenceTo>Master_Map__c</referenceTo>
        <relationshipLabel>Notification (mainWorkCenterPlant)</relationshipLabel>
        <relationshipName>Notification</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Notification</label>
    <nameField>
        <label>Notification Number</label>
        <type>Text</type>
    </nameField>
    <sharingModel>Read</sharingModel>
</CustomObject>